--- a/QuanLyBenhVien/FormDB/PrivRoleForm.resx
+++ b/QuanLyBenhVien/FormDB/PrivRoleForm.resx
@@ -117,4 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_multiBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAXFJREFUeF7tmdFtwkAQRF0CHZASKCElUEJKSAehA+gg6QA6SAkpISWkBNhnsdL9
+        5M8wlmaeNEK+Dy873ttbwxRCCCGEEEIIC7ErHUub+coMkv8rXUt7FpwYkz+w4ESSLyV5FpxI8qUkz4IT
+        Sb6U5FlwIsmXSP6n9LagXu8ixmr5LZH8M4TB5xLmvJRWASXfX/C79LmguB8i8dGIMR5myF+r2wS2wiPL
+        lXuTMFXQ2w5RhR8laVU8y4QRzKAKRiPeSzIUJgCxqIrRCFk1qEwAKqKbMvFl1aA0gYZ4KnU10BskKE0A
+        nn6bwA+wEtQmMEQR27oSiGlvAs2R+IiqkKA2YYxveURCD018ylCawJMnLvFlWwEwQVWKfTwyMNnS06Ld
+        f5NNV4G0FyhhXF5FL1DS7wt8WsKTt2+GvQ2285UhXyUMYFS2pE8D2z7AHIABl/nKECZR60bIPIABNENb
+        MADZEgPussXeAE4A63E4hBBC+JdpugExn8nLborwwAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
